--- a/container/public/index.html
+++ b/container/public/index.html
@@ -1,7 +1,7 @@
 <html>
     <head></head>
     <body>
-        <div id="product-list"></div>
-        <div id="dev-cart"></div>
+        <div id="container-products"></div>
+        <div id="container-cart"></div>
     </body>
 </html>
