refactor(products): add the ability to container app to decide when & where to render the products module

--- a/products/public/index.html
+++ b/products/public/index.html
@@ -1,6 +1,6 @@
 <html>
     <head></head>
     <body>
-        <div id="product-list"></div>
+        <div id="dev-products"></div>
     </body>
 </html>
