--- a/container/public/index.html
+++ b/container/public/index.html
@@ -1,5 +1,7 @@
 <html>
-    <head></head>
+    <head>
+        <title>Ecomm Micro Frontend</title>
+    </head>
     <body>
         <div id="container-products"></div>
         <div id="container-cart"></div>
